--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 								<section>
 									<span class="icon major fa-cog"></span>
 									<h3>Always Improving</h3>
-									<p>Our software has plans for improvement, and built in just 18 hours, shows great promise for future algorithmic learnings. The next version will include MapQuest's route planner, so you'll know exactly the route to tell your driver when the time to GO arrives.</p>
+									<p>Our software has plans for improvement, and built in just 18 hours, shows great promise for future algorithmic learnings. The next version will include MapQuest's route planner, so you'll know exactly the route to tell your driver when the time to GO arrives. Many other improvements and direct integrations are on the horizon.</p>
 								</section>
 								<!--<section>
 									<span class="icon major fa-desktop"></span>
@@ -382,9 +382,9 @@
 									<p>We designed Chill or Go (CoG) to be simple, and provide quick information so you can increase the time in your life meant for fun.</p>
 								</section>
 							</div>
-							<ul class="actions">
+							<!--<ul class="actions">
 								<li><a href="#" class="button">Learn more</a></li>
-							</ul>
+							</ul>-->
 						</div>
 					</section>
 
